--- a/presence.html
+++ b/presence.html
@@ -187,6 +187,7 @@ div#training_info > div.info * {
   <script src="/script/request.js"></script>
   <script src="/script/presence.js"></script>
   <script src="/script/utils.js"></script>
+  <script src="/script/code.js"></script>
   <script>
 function init() {
   window.bhv.utils.setBack('training');
