--- a/system6/index.html
+++ b/system6/index.html
@@ -5,8 +5,24 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <script src="/script/code.js"></script>
+  <script>
+function init() {
+  var cont = document.getElementById('content_container'),
+      check = window.bhv.code.check();
+  if (check === 3 || check === 0) {
+    var loader = document.getElementById('loader');
+    if (loader && cont) {
+      loader.style.display = 'none';
+      cont.style.display = 'block';
+    }
+  } else {
+    cont.parentNode.removeChild(cont);
+  }
+}
+  </script>
 </head>
-<body>
+<body onload="init();">
   <div id="header"><div class="left">
 <a href="/ov.html#system6"><img src="/image/bhv1.gif"/></a>
 <div>Grundlagen</div>
@@ -14,7 +30,8 @@
 <a href="/ov.html#system6"><img src="/image/bhv1.gif"/></a>
 </div>
 </div>
-  <div id="content_container"><h1 class="tactics">Annahme</h1>
+  <div id="loader">Loading...</div>
+  <div id="content_container" class="locked"><h1 class="tactics">Annahme</h1>
 <div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
