ov pw - ios focus lose

--- a/ov.html
+++ b/ov.html
@@ -73,7 +73,7 @@ div#lock:after {
   border-top: 0 none;
 }
 
-div#pw_bg {
+form#pw_bg {
   display: none;
   position: absolute;
   background-color: lightblue;
@@ -81,10 +81,10 @@ div#pw_bg {
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: 99;
+  /*z-index: 99;*/
   text-align: left;
 }
-div#pw_title {
+label#pw_title {
   position: absolute;
   top: 0;
   left: 0;
@@ -107,6 +107,13 @@ input#pw {
   padding: 0 1.1em;
   font-size: 2em;
   text-align: left;
+
+  /* avoid focus lose on ios! */
+  -moz-user-select: initial;
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
 }
 button#pw_ok {
   position: absolute;
@@ -249,8 +256,11 @@ function init() {
 
 function showPw() {
   var elemBg = document.getElementById('pw_bg'),
-      elemPw = document.getElementById('pw');
-  if (elemBg != null) {
+      elemPw = document.getElementById('pw'),
+      elemNav = document.getElementById('nav');
+  if (elemBg != null && elemNav != null) {
+    document.body.style.overflow = 'hidden';
+    elemNav.style.display = 'none';
     elemBg.style.display = 'block';
     if (elemPw != null) {
       elemPw.focus();
@@ -266,12 +276,12 @@ function showPw() {
       };
       //elemPw.addEventListener('keyup', handleKeyUp);
     }
-    document.body.style.overflow = 'hidden';
   }
 }
 function hidePw() {
   var elemBg = document.getElementById('pw_bg'),
       elemPw = document.getElementById('pw'),
+      elemNav = document.getElementById('nav'),
       pw = '', res;
   if (elemPw != null) {
     pw = elemPw.value;
@@ -292,6 +302,7 @@ function hidePw() {
     elemBg.style.display = 'none';
   }
   document.body.style.overflow = 'auto';
+  elemNav.style.display = 'block';
 }
 
 function addEvent(elem, event, handler) {
@@ -334,7 +345,7 @@ function removeClass(elem, clazz) {
   </script>
 </head>
 <body onload="init();">
-  <nav role="navigation">
+  <nav id="nav" role="navigation">
 
     <h1 id="nw" class="expandable" style=""><br>Nachwuchs<br>&nbsp;</h1>
     <div id="nw_2" class="expanded_container">
@@ -596,10 +607,10 @@ function removeClass(elem, clazz) {
     </div>
   </nav>
   <div id="lock">&nbsp;</div>
-  <div id="pw_bg">
-    <div id="pw_title">Passwort:</div>
+  <form id="pw_bg">
+    <label id="pw_title" for="pw">Passwort:</label>
     <input id="pw" type="password" placeholder="Passwort" inputmode="text" />
     <button id="pw_ok" type="button">Ok</button>
-  </div>
+  </form>
 </body>
 </html>
