herz+hirn - angriff aufspielerin

--- a/teambuilding/herzhirn_21/index.html
+++ b/teambuilding/herzhirn_21/index.html
@@ -149,8 +149,12 @@ var data = {
         },
         {
           "title": "Tricks",
-          "info": "<p><strong>Angriff</strong></p><ul><li>Block-Out provozieren</li><li>Block hoch anschlagen</li><li>Ball hoch in den Block + Sichern</li></ul>",
+          "info": "<p><strong>Aufspiel</strong></p><ul><li>Angriff der Aufspielerin</li></ul><p><strong>Angriff</strong></p><ul><li>Block-Out provozieren</li><li>Block hoch anschlagen</li><li>Ball hoch in den Block + Sichern</li></ul>",
           "items": [
+            {
+              "title": "Angriff der Aufspielerin",
+              "info": "<p><img src=\"angriff_auf.jpeg\" alt=\"Angriff der Aufspielerin?\" /></p><p>Die Aufspielerin muss das Blockverhalten beobachten oder 'spüren' und wissen, wo die Gegnerinnen stehen.<br>Der Angriff muss ansatzlos gespielt werden - eine Hand zum Ball oder Angriff verstecken.</p>"
+            },
             {
               "title": "Block-Out",
               "info": "<p>Wenn der Ball nah am Netz und weit genug außen ist,<br>kann ich den Ball mit der Schlaghand nach außen drücken<br>und so den Ball vom Block ins Out spielen =&gt; <strong>Punkt für uns</strong>.</p>"
@@ -380,6 +384,5 @@ function handleBackLink(event) {
      <div id="footer" class="links footer">Links</div>
     </div>
   </div>
-  <!--div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div></div-->
 </body>
 </html>
