--- a/teambuilding/herzhirn_21/index.html
+++ b/teambuilding/herzhirn_21/index.html
@@ -61,7 +61,7 @@ div.info {
   font-weight: normal;
   overflow: auto;
 }
-p, ol, ul, li {
+p, ol, ul, li, strong, p * {
   font-size: 1em;
   text-align: left;
 }
@@ -121,9 +121,6 @@ div.w25 {
   width: 25%;
 }
 
-strong {
-  font-size: inherit;
-}
   </style>
   <script src="/script/code.js"></script>
   <script>
@@ -153,7 +150,7 @@ var data = {
           "items": [
             {
               "title": "Angriff der Aufspielerin",
-              "info": "<p><img src=\"angriff_auf.jpeg\" alt=\"Angriff der Aufspielerin?\" /></p><p>Die Aufspielerin muss das Blockverhalten beobachten oder 'spüren' und wissen, wo die Gegnerinnen stehen.<br>Der Angriff muss ansatzlos gespielt werden - eine Hand zum Ball oder Angriff verstecken.</p>"
+              "info": "<p><img src=\"angriff_auf.jpeg\" alt=\"Angriff der Aufspielerin?\" /></p><p>Die Aufspielerin muss das Blockverhalten beobachten oder 'spüren' und wissen, wo die Gegnerinnen stehen.<br>Der Angriff muss ansatzlos gespielt werden - <del>eine Hand zum Ball</del> oder Angriff verstecken.</p>"
             },
             {
               "title": "Block-Out",
