--- a/_work/herzhirn/herzhirn.html
+++ b/_work/herzhirn/herzhirn.html
@@ -61,7 +61,7 @@ div.info {
   font-weight: normal;
   overflow: auto;
 }
-p, ol, ul, li {
+p, ol, ul, li, strong, p * {
   font-size: 1em;
   text-align: left;
 }
@@ -119,10 +119,6 @@ div.w33 {
 }
 div.w25 {
   width: 25%;
-}
-
-strong {
-  font-size: inherit;
 }
   </style>
   <script src="/script/code.js"></script>
