--- a/_work/herzhirn/herzhirn.html
+++ b/_work/herzhirn/herzhirn.html
@@ -19,7 +19,6 @@ div.container {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  /*white-space: nowrap;*/
 }
 div.title {
   position: absolute;
@@ -32,6 +31,7 @@ div.title {
   font-weight: bold;
   font-size: 4em;
   line-height: 100%;
+  white-space: nowrap;
 
   border-bottom: 1px solid gray;
 }
@@ -123,7 +123,7 @@ div.w25 {
   </style>
   <script src="/script/code.js"></script>
   <script>
-{{data}}
+var data = {{data.json}};
 
 var data_history = [],
     links = null;
