presence, diary, offline

--- a/ov.html
+++ b/ov.html
@@ -357,13 +357,13 @@ function removeClass(elem, clazz) {
       <h2 id="u15_21" class="expandable">U15 - Midi</h2>
       <div id="u15_21_2" class="expanded_container">
         <a id="info15" href="/info/u15.html"><h3>Infos</h3></a>
-        <!--a id="system4" href="/system4"><h3>Spielsystem</h3></a-->
+        <!--a id="system4" href="/system4/"><h3>Spielsystem</h3></a-->
       </div>
 
       <h2 id="u16_21" class="expandable">U16 - Schülerinnen</h2>
       <div id="u16_21_2" class="expanded_container">
         <a id="info16" href="/info/u16.html"><h3>Infos</h3></a>
-        <!--a id="system6" href="/system6"><h3>Spielsystem</h3></a-->
+        <!--a id="system6" href="/system6/"><h3>Spielsystem</h3></a-->
       </div>
 
       <h2 id="u18_21" class="expandable">U18 - Jugend weiblich</h2>
@@ -384,8 +384,8 @@ function removeClass(elem, clazz) {
         <a id="training_b" href="presence.html?key=b" class="locked_3"><h3>Anwesenheit</h3></a>
         <a id="training_jungs" href="presence.html?key=jungs" class="locked_3"><h3>Anwesenheit Jungs</h3></a>
         <a id="tagebuch_b" href="diary.html?key=b" class="locked_3"><h3>Trainingstagebuch</h3></a>
-        <!--a id="spielfeld6" href="/system6/spielfeld" class="locked_3"><h3>Spielsystem 4</h3></a-->
-        <a id="system6" href="/system6" class="locked_3"><h3>Spielsystem</h3></a>
+        <!--a id="spielfeld6" href="/system6/spielfeld/" class="locked_3"><h3>Spielsystem 4</h3></a-->
+        <a id="system6" href="/system6/" class="locked_3"><h3>Spielsystem</h3></a>
       </div>
 
       <h2 id="br2_21" class="expandable locked_2">Brückl 2 - Landesliga</h2>
@@ -395,10 +395,10 @@ function removeClass(elem, clazz) {
 
       <h2 id="br1_21" class="expandable locked_1">Brückl 1 - Bundesliga</h2>
       <div id="br1_21_2" class="expanded_container">
-        <a id="herzhirn_21" href="/teambuilding/herzhirn_21" class="locked_1"><h3>Herz + Hirn</h3></a>
+        <a id="herzhirn_21" href="/teambuilding/herzhirn_21/" class="locked_1"><h3>Herz + Hirn</h3></a>
         <a id="training_a" href="presence.html?key=a" class="locked_1"><h3>Anwesenheit</h3></a>
         <a id="tagebuch_a" href="diary.html?key=a" class="locked_1"><h3>Trainingstagebuch</h3></a>
-        <a id="system1" href="/system1" class="locked_1"><h3>Spielsystem</h3></a>
+        <a id="system1" href="/system1/" class="locked_1"><h3>Spielsystem</h3></a>
       </div>
     </div>
 
@@ -557,7 +557,7 @@ function removeClass(elem, clazz) {
 
         <h2 id="br3_19" class="expandable">Brückl 3 - Unterliga/Landesliga</h2>
         <div id="br3_19_2" class="expanded_container">
-          <!--a id="grundlagen_br3_19" href="/uld/grundlagen3"><h3>Grundlagen</h3></a-->
+          <!--a id="grundlagen_br3_19" href="/uld/grundlagen3/"><h3>Grundlagen</h3></a-->
           <a id="standings_br3_19" href="standings.html?key=br3_19"><h3>Tabelle (AR)</h3></a>
           <a id="results_br3_19" href="results.html?key=br3_19"><h3>Ergebnisse (AR)</h3></a>
           <a id="statistics_br3_19" href="/statistics/19/u15AR.html"><h3>Statistik (AR)</h3></a>
