--- a/_work/presence/TreeMd/TreeMd/data/template.html
+++ b/_work/presence/TreeMd/TreeMd/data/template.html
@@ -3,6 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Template</title>
+  <style>
+html, body, * {
+  border: 0 none;
+  margin: 0;
+  padding: 0;
+} 
+div.presentation {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: red;
+}
+div.presentation > img, div.presentation > p > img {
+  position: absolute;
+  width: 50%;
+  max-height: 100%;
+  background-color: yellow;
+}
+div.presentation > div.presentation_text {
+  position: absolute;
+  left: 50%;
+  width: 50%;
+  max-height: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+  font-size: 1.5em;
+  background-color: orange;
+}
+  </style>
 </head>
 <body>
 {{content}}
