--- a/ov.html
+++ b/ov.html
@@ -173,7 +173,7 @@ function init() {
     // 'spielfeld6',
     'br3_21': ['training_b', 'training_jungs', 'tagebuch_b', 'system6'],
     'br2_21': [],
-    'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1'],
+    'br1_21': ['sommertraining', 'herzhirn_21', 'training_a', 'tagebuch_a', 'system1'],
 
     // 'archive': ...
     // 'a19': ...
@@ -395,6 +395,7 @@ function removeClass(elem, clazz) {
 
       <h2 id="br1_21" class="expandable locked_1">Brückl 1 - Bundesliga</h2>
       <div id="br1_21_2" class="expanded_container">
+        <a id="sommertraining" href="/training/sommer.html"><h3>Sommertraining</h3></a>
         <a id="herzhirn_21" href="/teambuilding/herzhirn_21/" class="locked_1"><h3>Herz + Hirn</h3></a>
         <a id="training_a" href="presence.html?key=a" class="locked_1"><h3>Anwesenheit</h3></a>
         <a id="tagebuch_a" href="diary.html?key=a" class="locked_1"><h3>Trainingstagebuch</h3></a>
