herz&hirn - eisessen

--- a/teambuilding/herzhirn_21/index.html
+++ b/teambuilding/herzhirn_21/index.html
@@ -310,7 +310,7 @@ var data = ﻿{
     },
     {
       "title": "Stimmung",
-      "info": "<p>Mannschaftstreffen Mai 2020</p>",
+      "info": "<ul><li>Mannschaftstreffen Mai 2020</li><li>Eisessen (14. Juli)</li></ul>",
       "items": [
         {
           "title": "Teambuilding",
@@ -318,7 +318,7 @@ var data = ﻿{
           "items": [
             {
               "title": "Warum laut?",
-              "info": "<p><img src=\"2005241.jpeg\" alt=\"Warum laut?\" /></p>",
+              "info": "<p><img src=\"tb1/2005241.jpeg\" alt=\"Warum laut?\" /></p>",
               "items": [
                 {
                   "title": "Danke für Deine Mitarbeit!",
@@ -328,13 +328,31 @@ var data = ﻿{
             },
             {
               "title": "Wir werden laut!",
-              "info": "<p><img src=\"2005242.jpeg\" alt=\"Warum laut?\" /></p>",
+              "info": "<p><img src=\"tb1/2005242.jpeg\" alt=\"Warum laut?\" /></p>",
               "items": [
                 {
                   "title": "Danke für Deine Mitarbeit!",
                   "info": ""
                 }
               ]
+            }
+          ]
+        },
+        {
+          "title": "Eisessen",
+          "info": "<p>Die ersten Wochen sind vorüber.</p><ul><li>Was hat mir bisher gefallen?</li><li>Was erwarte ich mir von den nächsten Wochen und Monaten?</li><li>Was will und kann ich dazu beitragen, dass es gelingt?</li></ul>",
+          "items": [
+            {
+              "title": "Bisher",
+              "info": "<p><img src=\"tb2/tb1.jpeg\" alt=\"Was hat mir bisher gefallen?\" /></p>"
+            },
+            {
+              "title": "Erwartungen",
+              "info": "<p><img src=\"tb2/tb2.jpeg\" alt=\"Was erwarte ich mir von den nächsten Wochen und Monaten?\" /></p>"
+            },
+            {
+              "title": "Gemeinsam",
+              "info": "<p><img src=\"tb2/tb3a.jpeg\" alt=\"Was will und kann ich dazu beitragen, dass es gelingt?\" /><img src=\"tb2/tb3b.jpeg\" alt=\"Was will und kann ich dazu beitragen, dass es gelingt?\" /></p>"
             }
           ]
         }
